<resources>
    <string name="app_name">Kloklin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_button">play button</string>
    <string name="default_time">00:00</string>
    <string name="default_title">Default Title</string>
    <string name="lorem_ipsum">Lorem Ipsum Dolor Set</string>
    <string name="skip_to_next">skip to next</string>
    <string name="skip_back">skip back</string>
    <string name="title_activity_kloklin">KloklinActivity</string>
    <string name="action_list">List</string>
    <string name="action_clock">Clock</string>
    <string name="edit">Edit</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="finish">FINISH</string>
    <string name="endOfTime">00:00</string>
    <string name="default_description">Default Description</string>
    <string name="sound_pref_title">Interval Sound</string>
    <string name="sound_pref_summary">Select a sound to play at the end of each interval</string>
    <string name="mute_pref_summary">Play a sound at the end of each interval?</string>
    <string name="mute_pref_title">Enable Sounds</string>
    <string name="pref_beep_default">\@raw/chime</string>
    <string name="settings_title">Settings</string>
    <string name="sounds_title">Sounds</string>
    <string name="overflow_menu">Overflow Menu</string>
    <string name="enter_a_program_description">Enter a description for this program</string>
</resources>
